tests/negative/neg_pr117_explicit_all.safe
-- Test: neg_pr117_explicit_all
-- Description: Explicit `.all` is removed from the admitted Safe source surface.
-- Expected: REJECT removed_source_construct

package neg_PR117_Explicit_All

   type payload is record
      value : integer;

   type payload_Ptr is not null access payload;

   function demo (Source : payload_Ptr) returns integer
      return Source.all.value;
